# MagicSquare_8

./: .cursorrules  .gitignore  README.md  pyproject.toml
GREEN_DOCS/: GC-001_ac01_bv01_none.md  GC-002_ac01_size_parametrize.md  GC-032_coverage_gate.md  README.md  _template.md
Prompt/: 02_MagicSquare_DualTrack_UI_Logic_TDD_CleanArchitecture_transcript.md  03_MagicSquare_CursorRules_UserEntity_transcript.md  04_MagicSquare_CursorRules_Modularization_transcript.md  05_MagicSquare_Level1-5_transcript.md  06_MagicSquare_PRD_transcript.md  07_MagicSquare_FR01_RED_transcript.md  09_MagicSquare_DualTrack_RED_Skeleton_transcript.md  10_MagicSquare_FR01_AC01_GREEN_transcript.md  11_MagicSquare_Full_GREEN_Sprint_Screen_transcript.md  12_MagicSquare_PyQt6_Screen_Migration_transcript.md  13_MagicSquare_CodeReview_QA_RefactorPlan_transcript.md  14_MagicSquare_Full_REFACTOR_Sprint_transcript.md
Prompting/: 01_MagicSquare_ProblemDefinition_STEP1-5_prompt.md
Report/: 01_MagicSquare_ProblemDefinition_STEP1-5.md  02_MagicSquare_DualTrack_UI_Logic_TDD_CleanArchitecture.md  03_MagicSquare_CursorRules_UserEntity_Progress_Report.md  04_MagicSquare_CursorRules_Modularization_Report.md  05_Level5_Scenario_Verification_and_Summary.md  06_MagicSquare_PRD_PreImplementation_Report.md  07_MagicSquare_FR01_RED_TestPlan_Report.md  09_MagicSquare_DualTrack_RED_Skeleton_Test_Report.md  10_MagicSquare_FR01_AC01_GREEN_Test_Report.md  11_MagicSquare_Full_GREEN_Sprint_Screen_Report.md  12_MagicSquare_PyQt6_Screen_Migration_Report.md  13_MagicSquare_CodeReview_QA_RefactorPlan_Report.md  (+1 more)
(+86 files in other folders)
